Model to Users and hash password

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Luis Fernando Aguilar Jimenez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -25,6 +26,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.10",
